--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
         rel="stylesheet" />
     <link href="http://twitter.github.io/bootstrap/assets/js/google-code-prettify/prettify.css"
         rel="stylesheet" />
-    <link href="../LetsCode/themes/css/justify.css" rel="stylesheet" />
+    <link href="themes/css/justify.css" rel="stylesheet" />
 </head>
 <body>
     <div class="navbar navbar-fixed-top">
@@ -32,7 +32,6 @@
                 <div class="well">
                     <ul class="nav nav-list">
                         <li class="nav-header">导航菜单</li>
-                        
                         <li class="active"><a href="#">测试</a></li>
                         <li><a href="#">其它</a></li>
                         <li class="divider"></li>
